reworked backend structure and added EurekaServer